# panoptikon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  panoptikon.toml
.claude/: settings.json
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: config.rs  main.rs  ws.rs
agent/src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  os.rs
docs/: CODE_REVIEW.md  GUI_IMPROVEMENTS.md  IMPROVEMENTS.md  PRD.md  handover-2026-02-20.md
scripts/: build-prod.sh
server/: Cargo.toml
server/src/: config.rs  enrichment.rs  lib.rs  main.rs  mdns.rs  netflow.rs  retention.rs  static_files.rs  webhook.rs
server/src/api/: agents.rs  alerts.rs  audit.rs  auth.rs  config_backups.rs  dashboard.rs  devices.rs  error.rs  export.rs  metrics.rs  mod.rs  scanner.rs  search.rs  settings.rs  setup.rs  topology.rs  traffic.rs  vyos.rs
server/src/db/: mod.rs
server/src/db/migrations/: 001_init.sql  002_sessions.sql  003_cleanup_test_agents.sql  004_device_events.sql  005_port_scans.sql  006_mdns_services.sql  007_alert_management.sql  008_topology_positions.sql  009_audit_log.sql  009_device_enrichment.sql  010_device_enrichment.sql  011_config_backups.sql
server/src/oui/: mod.rs  oui_db.csv
server/src/scanner/: arp.rs  mod.rs
server/src/vyos/: client.rs  iperf3.rs  mod.rs  speedtest_ookla.rs
server/src/ws/: hub.rs
server/tests/: integration.rs
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
web/e2e/: agents.spec.ts  fixtures.ts  helpers.ts
web/src/app/: globals.css  layout.tsx
web/src/components/: CommandPalette.tsx  DeviceTypeIcon.tsx  MotionCard.tsx  MotionStagger.tsx  PageTransition.tsx  sparkline-chart.tsx
web/src/lib/: api.ts  device-icons.ts  device-type.ts  format.ts  os-icons.ts  types.ts  ws.ts
(+28 files in other folders)
