[package]
name = "panoptikon-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Panoptikon agent — lightweight system metrics collector"

[[bin]]
name = "panoptikon-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
http = "1"
