[package]
name = "panoptikon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Panoptikon server — VyOS router management & network monitoring backend"

[[bin]]
name = "panoptikon-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio-tungstenite = "0.21"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
hickory-resolver = "0.24"
futures = "0.3"
